--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+@import "./reset";
+@import "./font";
+@import "./global";
