--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,14 +1,10 @@
-input,
-select,
-textarea {
-  font-family: inherit;
-  outline: none;
-  border: none;
-  background: none;
-}
-
-button {
-  font-family: inherit;
+html, body {
+  background-color: #f5f7f9;
+  min-width: 1200px;
+  font-size: 12px;
+  -webkit-font-smoothing: antialiased;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -32,4 +28,15 @@ body {
   .el-table__body-wrapper::-webkit-scrollbar-thumb:hover {
     background-color: #bbb;
   }
+}
+
+input, select, textarea {
+  font-family: inherit;
+  outline: none;
+  border: none;
+  background: none;
+}
+
+button {
+  font-family: inherit;
 }
