feat: 鉴权方式改为异步添加路由

--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: DINPro-Medium;
-  src: url(~@/assets/font/DINPro-Medium.6ea892b4.ttf) format('TrueType');
+  src: url(@/assets/font/DINPro-Medium.6ea892b4.ttf) format('TrueType');
 }
 
 
